force-app/main/default/objects/Roster_Membership__c/Roster_Membership__c.object-meta.xml
<CustomObject>
    <label>Roster Membership</label>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Roster Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roster Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>