force-app/main/default/objects/Roster_Membership__c/fields/Roster__c.field-meta.xml
<CustomField>
    <fullName>Roster__c</fullName>
    <label>Roster</label>
    <referenceTo>Roster__c</referenceTo>
    <relationshipLabel>Roster Memberships</relationshipLabel>
    <relationshipName>Roster_Memberships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>