force-app/main/default/objects/Roster_Membership__c/fields/Skater__c.field-meta.xml
<CustomField>
    <fullName>Skater__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Roster Memberships</relationshipLabel>
    <relationshipName>Roster_Memberships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>