force-app/main/default/objects/Roster_Membership__c/fields/Skater_Number__c.field-meta.xml
<CustomField>
    <fullName>Skater_Number__c</fullName>
    <label>Skater Number</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>